--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
   </head>
   <body>
     <header>
+      <nav>
+        <div class="row">
+          <img
+            src="assets/images/logo-white.png"
+            alt="Omnifood Logo"
+            class="logo"
+          />
+          <ul class="main-nav">
+            <li><a href="#">Food Delivery</a></li>
+            <li><a href="#">How it Works</a></li>
+            <li><a href="#">Our Cities</a></li>
+            <li><a href="#">Sign Up</a></li>
+          </ul>
+        </div>
+      </nav>
       <div class="hero-text-box">
         <h1>
           Goodbye junk food.<br />
