--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
     </section>
     <section class="meals-section">
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
           <figure class="meal-photo">
             <img
@@ -126,7 +126,7 @@
           </figure>
         </li>
       </ul>
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
           <figure class="meal-photo">
             <img
@@ -160,6 +160,124 @@
           </figure>
         </li>
       </ul>
+    </section>
+    <section class="steps">
+      <div class="row">
+        <h2>How it works &mdash; Simple as 1, 2, 3</h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-2 steps-box">
+          <img
+            src="assets/images/app-iPhone.png"
+            alt="Omnifood app on iPhone"
+            class="app-screen"
+          />
+        </div>
+        <div class="col span-1-of-2 steps-box">
+          <div class="works-step">
+            <div>1</div>
+            <p>
+              Choose the subscription plan that best fits your needs and sign up
+              today.
+            </p>
+          </div>
+          <div class="works-step">
+            <div>2</div>
+            <p>
+              Order your delicious meal using our mobile app or website. Or you
+              can even call us!
+            </p>
+          </div>
+          <div class="works-step">
+            <div>3</div>
+            <p>
+              Enjoy your meal after less than 20 minutes. See you the next time!
+            </p>
+          </div>
+          <a href="#" class="btn-app"
+            ><img
+              src="assets/images/download-app-android.png"
+              alt="Android store button"
+          /></a>
+          <a href="#" class="btn-app"
+            ><img src="assets/images/download-app.svg" alt="App store button"
+          /></a>
+        </div>
+      </div>
+    </section>
+    <section class="cities">
+      <div class="row">
+        <h2>We're currently in these cities</h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-4 box">
+          <img src="assets/images/lisbon-3.jpg" alt="Lisbon location" />
+          <h3>Lisbon</h3>
+          <div class="city-feature">
+            <i class="icon ion-md-person"></i>
+            1600+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="icon ion-md-star"></i>
+            60+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="icon ion-logo-twitter"></i>
+            @omnifood_lx
+          </div>
+        </div>
+        <div class="col span-1-of-4 box">
+          <img
+            src="assets/images/san-francisco.jpg"
+            alt="San Francisco location"
+          />
+          <h3>San Francisco</h3>
+          <div class="city-feature">
+            <i class="icon ion-md-person"></i>
+            3700+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="icon ion-md-star"></i>
+            160+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="icon ion-logo-twitter"></i>
+            @omnifood_sf
+          </div>
+        </div>
+        <div class="col span-1-of-4 box">
+          <img src="assets/images/berlin.jpg" alt="Berlin location" />
+          <h3>Berlin</h3>
+          <div class="city-feature">
+            <i class="icon ion-md-person"></i>
+            2300+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="icon ion-md-star"></i>
+            110+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="icon ion-logo-twitter"></i>
+            @omnifood_berlin
+          </div>
+        </div>
+        <div class="col span-1-of-4 box">
+          <img src="assets/images/london.jpg" alt="London location" />
+          <h3>London</h3>
+          <div class="city-feature">
+            <i class="icon ion-md-person"></i>
+            1200+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="icon ion-md-star"></i>
+            50+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="icon ion-logo-twitter"></i>
+            @omnifood_london
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
