--- a/index.html
+++ b/index.html
@@ -214,16 +214,16 @@
           <img src="assets/images/lisbon-3.jpg" alt="Lisbon location" />
           <h3>Lisbon</h3>
           <div class="city-feature">
-            <i class="icon ion-md-person"></i>
+            <i class="icon ion-md-person icon-small"></i>
             1600+ happy eaters
           </div>
           <div class="city-feature">
-            <i class="icon ion-md-star"></i>
+            <i class="icon ion-md-star icon-small"></i>
             60+ top chefs
           </div>
           <div class="city-feature">
-            <i class="icon ion-logo-twitter"></i>
-            @omnifood_lx
+            <i class="icon ion-logo-twitter icon-small"></i>
+            <a href="#">@omnifood_lx</a>
           </div>
         </div>
         <div class="col span-1-of-4 box">
@@ -233,49 +233,98 @@
           />
           <h3>San Francisco</h3>
           <div class="city-feature">
-            <i class="icon ion-md-person"></i>
+            <i class="icon ion-md-person icon-small"></i>
             3700+ happy eaters
           </div>
           <div class="city-feature">
-            <i class="icon ion-md-star"></i>
+            <i class="icon ion-md-star icon-small"></i>
             160+ top chefs
           </div>
           <div class="city-feature">
-            <i class="icon ion-logo-twitter"></i>
-            @omnifood_sf
+            <i class="icon ion-logo-twitter icon-small"></i>
+            <a href="#">@omnifood_sf</a>
           </div>
         </div>
         <div class="col span-1-of-4 box">
           <img src="assets/images/berlin.jpg" alt="Berlin location" />
           <h3>Berlin</h3>
           <div class="city-feature">
-            <i class="icon ion-md-person"></i>
+            <i class="icon ion-md-person icon-small"></i>
             2300+ happy eaters
           </div>
           <div class="city-feature">
-            <i class="icon ion-md-star"></i>
+            <i class="icon ion-md-star icon-small"></i>
             110+ top chefs
           </div>
           <div class="city-feature">
-            <i class="icon ion-logo-twitter"></i>
-            @omnifood_berlin
+            <i class="icon ion-logo-twitter icon-small"></i>
+            <a href="#">@omnifood_berlin</a>
           </div>
         </div>
         <div class="col span-1-of-4 box">
           <img src="assets/images/london.jpg" alt="London location" />
           <h3>London</h3>
           <div class="city-feature">
-            <i class="icon ion-md-person"></i>
+            <i class="icon ion-md-person icon-small"></i>
             1200+ happy eaters
           </div>
           <div class="city-feature">
-            <i class="icon ion-md-star"></i>
+            <i class="icon ion-md-star icon-small"></i>
             50+ top chefs
           </div>
           <div class="city-feature">
-            <i class="icon ion-logo-twitter"></i>
-            @omnifood_london
+            <i class="icon ion-logo-twitter icon-small"></i>
+            <a href="#">@omnifood_london</a>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="testimonials">
+      <div class="row">
+        <h2>Our customers can't live without us</h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-3">
+          <blockquote>
+            Omnifood is just awesome! I just launched a startup which leaves me
+            with no time for cooking, so Omnifood is a life-saver. Now that I
+            got used to it, I couldn't live without my daily meals!
+            <cite
+              ><img
+                src="assets/images/customer-1.jpg"
+                alt="Customer 1 Testimonial"
+              />
+              Alberto Duncan</cite
+            >
+          </blockquote>
+        </div>
+        <div class="col span-1-of-3">
+          <blockquote>
+            Inexpensive, healthy and great-tasting meals, delivered right to my
+            home. We have lots of food delivery here in Lisbon, but no one comes
+            even close to Omifood. Me and my family are so in love!
+            <cite
+              ><img
+                src="assets/images/customer-2.jpg"
+                alt="Customer 2 Testimonial"
+              />
+              Joana Silva</cite
+            >
+          </blockquote>
+        </div>
+        <div class="col span-1-of-3">
+          <blockquote>
+            I was looking for a quick and easy food delivery service in San
+            Franciso. I tried a lot of them and ended up with Omnifood. Best
+            food delivery service in the Bay Area. Keep up the great work!
+            <cite
+              ><img
+                src="assets/images/customer-3.jpg"
+                alt="Customer 3 Testimonial"
+              />
+              Milton Chapman</cite
+            >
+          </blockquote>
         </div>
       </div>
     </section>
