--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="row">
         <!-- &mdash; gives a larger dash -->
 
-        <h2>Get food fast &mdash; not fast food.</h2>
+        <h2>Get food fast &mdash; not fast food</h2>
         <p class="long-copy">
           Hello, we’re Omnifood, your new premium food delivery service. We know
           you’re always busy. No time for cooking. So let us take care of that,
@@ -325,6 +325,113 @@
               Milton Chapman</cite
             >
           </blockquote>
+        </div>
+      </div>
+    </section>
+    <section class="plans">
+      <div class="row">
+        <h2>Start eating healthy today</h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-3">
+          <div class="plan-box">
+            <div>
+              <h3>Premium</h3>
+              <p class="plan-price">$399 <span>/ month</span></p>
+              <p class="plan-price-meal">
+                That’s only $13.30 per meal
+              </p>
+            </div>
+            <div>
+              <ul>
+                <li>
+                  <i class="icon ion-md-checkmark icon-small"></i>
+                  1 meal everyday
+                </li>
+                <li>
+                  <i class="icon ion-md-checkmark icon-small"></i>
+                  Order 24/7
+                </li>
+                <li>
+                  <i class="icon ion-md-checkmark icon-small"></i>
+                  Access to newest creations
+                </li>
+                <li>
+                  <i class="icon ion-md-checkmark icon-small"></i>
+                  Free delivery
+                </li>
+              </ul>
+            </div>
+            <div>
+              <a href="#" class="btn btn-full">Sign up now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col span-1-of-3">
+          <div class="plan-box">
+            <div>
+              <h3>Pr0</h3>
+              <p class="plan-price">$149 <span>/ month</span></p>
+              <p class="plan-price-meal">
+                That’s only $14.90 per meal
+              </p>
+            </div>
+            <div>
+              <ul>
+                <li>
+                  <i class="icon ion-md-checkmark icon-small"></i>
+                  1 meal 10 days/month
+                </li>
+                <li>
+                  <i class="icon ion-md-checkmark icon-small"></i>
+                  Order 24/7
+                </li>
+                <li>
+                  <i class="icon ion-md-checkmark icon-small"></i>
+                  Access to newest creations
+                </li>
+                <li>
+                  <i class="icon ion-md-checkmark icon-small"></i>
+                  Free delivery
+                </li>
+              </ul>
+            </div>
+            <div>
+              <a href="#" class="btn btn-ghost">Sign up now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col span-1-of-3">
+          <div class="plan-box">
+            <div>
+              <h3>Starter</h3>
+              <p class="plan-price">$19 <span>/ meal</span></p>
+              <!-- puts an empty line -->
+              <p class="plan-price-meal">&nbsp;</p>
+            </div>
+            <div>
+              <ul>
+                <li>
+                  <i class="icon ion-md-checkmark icon-small"></i>
+                  1 meal everyday
+                </li>
+                <li>
+                  <i class="icon ion-md-checkmark icon-small"></i>
+                  Order from 8 am to 12 pm
+                </li>
+                <li>
+                  <i class="icon ion-md-close icon-small"></i>
+                </li>
+                <li>
+                  <i class="icon ion-md-checkmark icon-small"></i>
+                  Free delivery
+                </li>
+              </ul>
+            </div>
+            <div>
+              <a href="#" class="btn btn-ghost">Sign up now</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
