added jquery and sticky nav

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             alt="Omnifood Logo"
             class="logo"
           />
+          <img
+            src="assets/images/logo.png"
+            alt="Omnifood Logo"
+            class="logo-black"
+          />
           <ul class="main-nav">
             <li><a href="#">Food Delivery</a></li>
             <li><a href="#">How it Works</a></li>
@@ -45,7 +50,7 @@
         <a class="btn btn-ghost" href="#">Show me more</a>
       </div>
     </header>
-    <section class="features">
+    <section class="features js-features">
       <div class="row">
         <!-- &mdash; gives a larger dash -->
 
@@ -552,8 +557,12 @@
         </p>
       </div>
     </footer>
+    <!-- only called after the rest of the page is loaded -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
+    <script src="external/javascript/jquery.waypoints.min.js"></script>
+    <script src="assets/javascript/script.js"></script>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
 </html>
