nav and button scrolls

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             class="logo-black"
           />
           <ul class="main-nav">
-            <li><a href="#">Food Delivery</a></li>
-            <li><a href="#">How it Works</a></li>
-            <li><a href="#">Our Cities</a></li>
-            <li><a href="#">Sign Up</a></li>
+            <li><a href="#features">Food Delivery</a></li>
+            <li><a href="#works">How it Works</a></li>
+            <li><a href="#cities">Our Cities</a></li>
+            <li><a href="#plans">Sign Up</a></li>
           </ul>
         </div>
       </nav>
@@ -46,11 +46,11 @@
           Goodbye junk food.<br />
           Hello super healthy meals.
         </h1>
-        <a class="btn btn-full" href="#">I'm hungry</a>
-        <a class="btn btn-ghost" href="#">Show me more</a>
+        <a class="btn btn-full js-scroll-plan">I'm hungry</a>
+        <a class="btn btn-ghost js-scroll-start">Show me more</a>
       </div>
     </header>
-    <section class="features js-features">
+    <section class="features js-features" id="features">
       <div class="row">
         <!-- &mdash; gives a larger dash -->
 
@@ -167,7 +167,7 @@
         </li>
       </ul>
     </section>
-    <section class="steps">
+    <section class="steps" id="works">
       <div class="row">
         <h2>How it works &mdash; Simple as 1, 2, 3</h2>
       </div>
@@ -211,7 +211,7 @@
         </div>
       </div>
     </section>
-    <section class="cities">
+    <section class="cities" id="cities">
       <div class="row">
         <h2>We're currently in these cities</h2>
       </div>
@@ -334,7 +334,7 @@
         </div>
       </div>
     </section>
-    <section class="plans">
+    <section class="plans js-plans" id="plans">
       <div class="row">
         <h2>Start eating healthy today</h2>
       </div>
