started adding animations

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="external/css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="external/css/grid.css" />
+    <link rel="stylesheet" type="text/css" href="external/css/animate.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/queries.css" />
     <link
@@ -46,8 +47,8 @@
           Goodbye junk food.<br />
           Hello super healthy meals.
         </h1>
-        <a class="btn btn-full js-scroll-plan">I'm hungry</a>
-        <a class="btn btn-ghost js-scroll-start">Show me more</a>
+        <a class="btn btn-full js-scroll-plan" href="#">I'm hungry</a>
+        <a class="btn btn-ghost js-scroll-start" href="#">Show me more</a>
       </div>
     </header>
     <section class="features js-features" id="features">
@@ -61,7 +62,7 @@
           we’re really good at it, we promise!
         </p>
       </div>
-      <div class="row">
+      <div class="row js-wp-1">
         <div class="col span-1-of-4 box">
           <i class="icon ion-md-infinite icon-big"></i>
           <h3>Up to 365 days/year</h3>
