--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <img
             src="assets/images/app-iPhone.png"
             alt="Omnifood app on iPhone"
-            class="app-screen"
+            class="app-screen js-wp-2"
           />
         </div>
         <div class="col span-1-of-2 steps-box">
@@ -212,7 +212,7 @@
         </div>
       </div>
     </section>
-    <section class="cities" id="cities">
+    <section class="cities js-wp-3" id="cities">
       <div class="row">
         <h2>We're currently in these cities</h2>
       </div>
@@ -341,7 +341,7 @@
       </div>
       <div class="row">
         <div class="col span-1-of-3">
-          <div class="plan-box">
+          <div class="plan-box js-wp-4">
             <div>
               <h3>Premium</h3>
               <p class="plan-price">$399 <span>/ month</span></p>
