made mobile responsive nav bar with dropdown

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <li><a href="#cities">Our Cities</a></li>
             <li><a href="#plans">Sign Up</a></li>
           </ul>
+          <a class="mobile-nav-icon js-nav-icon"
+            ><i class="icon ion-md-menu"></i
+          ></a>
         </div>
       </nav>
       <div class="hero-text-box">
