--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="Omnifood is a premium food delivery service with the mission to bring affordable and healthy meals to as many people as possible."
+    />
     <link rel="stylesheet" type="text/css" href="external/css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="external/css/grid.css" />
     <link rel="stylesheet" type="text/css" href="external/css/animate.css" />
@@ -526,7 +530,7 @@
           </div>
           <div class="row">
             <div class="col span-1-of-3">
-              <label for="">Newsletter?</label>
+              <label for="newsletter">Newsletter?</label>
             </div>
             <div class="col span-2-of-3">
               <input type="checkbox" name="news" id="news" checked /> Yes
@@ -535,7 +539,7 @@
           </div>
           <div class="row">
             <div class="col span-1-of-3">
-              <label for="">Drop us a line!</label>
+              <label for="input-box">Drop us a line!</label>
             </div>
             <div class="col span-2-of-3">
               <textarea
@@ -549,7 +553,7 @@
           </div>
           <div class="row">
             <div class="col span-1-of-3">
-              <label for="">&nbsp;</label>
+              <label for="empty-line">&nbsp;</label>
             </div>
             <div class="col span-2-of-3">
               <input type="submit" value="Send it!" />
